--- a/packages/staart/i18n/en.json
+++ b/packages/staart/i18n/en.json
@@ -39,7 +39,7 @@
         "account": "Account"
     },
     "forgot-password": {
-        "forgot-password": "Forgot passwrod",
+        "forgot-password": "Forgot password",
         "back-to": "Back to",
         "login-page": "log in page",
         "password-reset-email-sent": "A password reset email has been sent.",
